package edu.hitsz.observer;

public interface BombObserver {
    void Bombupdate();
}